2018-07-31  John Wilander  <wilander@apple.com>

        Resource Load Statistics: Remove partitioned cookies for reduced complexity, lower memory footprint, and ability to support more platforms
        https://bugs.webkit.org/show_bug.cgi?id=188109
        <rdar://problem/42664391>

        Reviewed by Brent Fulgham, Chris Dumez, and Alex Christensen.

        Tests: http/tests/resourceLoadStatistics/cookie-deletion.html
               http/tests/resourceLoadStatistics/cookies-with-and-without-user-interaction.html
               http/tests/storageAccess/has-storage-access-from-prevalent-domain-with-user-interaction.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-non-sandboxed-iframe-pop-window.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-non-sandboxed-iframe.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-user-interaction-and-access-from-right-frame.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-user-interaction-but-access-from-wrong-frame.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-user-interaction.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-iframe-from-prevalent-domain-without-user-interaction.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-iframe.html
               http/tests/storageAccess/request-and-grant-access-cross-origin-sandboxed-nested-iframe.html

        This patch removes cookie partitioning which reduces the model to just
        blocked cookies (in third-party contexts) and first-party cookie access.

        Several of the changes are renaming to reflect that there are no more